Change how feature list is displayed

--- a/notebooks/Presentation_Notebook.ipynb
+++ b/notebooks/Presentation_Notebook.ipynb
@@ -4260,22 +4260,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['num_rel_holes_0', 'num_rel_holes_1', 'num_rel_holes_2', 'num_holes_0', 'num_holes_1', 'num_holes_2', 'avg_lifetime_0', 'avg_lifetime_1', 'avg_lifetime_2', 'amplitude', 'length_Betti_0', 'sum_length_0', 'average_length_0', 'onset_longest_Betti_0', 'smallest_onset_1', 'average_middle_point_1', 'polynomial_feature_1_0', 'polynomial_feature_2_0', 'polynomial_feature_3_0', 'polynomial_feature_4_0'])"
+       "['num_rel_holes_0',\n",
+       " 'num_rel_holes_1',\n",
+       " 'num_rel_holes_2',\n",
+       " 'num_holes_0',\n",
+       " 'num_holes_1',\n",
+       " 'num_holes_2',\n",
+       " 'avg_lifetime_0',\n",
+       " 'avg_lifetime_1',\n",
+       " 'avg_lifetime_2',\n",
+       " 'amplitude',\n",
+       " 'length_Betti_0',\n",
+       " 'sum_length_0',\n",
+       " 'average_length_0',\n",
+       " 'onset_longest_Betti_0',\n",
+       " 'smallest_onset_1',\n",
+       " 'average_middle_point_1',\n",
+       " 'polynomial_feature_1_0',\n",
+       " 'polynomial_feature_2_0',\n",
+       " 'polynomial_feature_3_0',\n",
+       " 'polynomial_feature_4_0']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "features_dict.keys()"
+    "list(features_dict.keys())"
    ]
   },
   {
