improve some of the comments

--- a/notebooks/molecule_coupling_prediction.ipynb
+++ b/notebooks/molecule_coupling_prediction.ipynb
@@ -99,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For ths demo we focus on the 100 largest molecules and their 12609 edges from the training dataset. There are 8 different bond types: 1JHC, 2JHH, 1JHN, 2JHN, 2JHC, 3JHH, 3JHC, 3JHN. The plot below shows the different bond strengths related to the different types. For the 100 largest molecules only the five bond types 1JHC, 2JHC, 3JHC, 2JHH, 3JHH are available."
+    "For ths demo we focus on the 100 largest molecules and their 12609 edges from the training dataset. For these 100 molecules we have five different bond types: 1JHC, 2JHC, 3JHC, 2JHH and 3JHH. The plot below shows the different bond strengths related to the different types. "
    ]
   },
   {
@@ -164,9 +164,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook we show how features generated using topological data analysis (TDA) can be used to improve your machine learning models. Nevertheless, we will also use some non-TDA features. Here we give a brief overview of which features were used. Credit goes to this notebook, where the features were presented: https://www.kaggle.com/robertburbidge/distance-features. The focus here lies on a geometric analysis, hence the name 'distance features'. \n",
+    "In this notebook we show how features generated using topological data analysis (TDA) can be used to improve your machine learning models. Nevertheless, we will also use some non-TDA features. Here we give a brief overview of which features were used. Credit goes to this notebook on Kaggle, where the features were introduced: https://www.kaggle.com/robertburbidge/distance-features. The focus here lies on a geometric analysis, hence the name 'distance features'. \n",
     "\n",
-    "List of non-TDA features (atom 0 or 1 respectively refers to the atoms in the atom pair that makes up the bond):\n",
+    "List of non-TDA features (atom 0 or 1 respectively refers to the two atoms in the atom pair that makes up the bond):\n",
     "\n",
     "* 'atom_index_0', 'atom_index_1'\n",
     "* 'type', 'type_0', 'type_1'\n",
@@ -185,7 +185,7 @@
     "* 'x_1r', 'y_1r', 'z_1r', 'x_0l', 'y_0l', 'z_0l', 'x_0r', 'y_0r', 'z_0r', 'x_1l', 'y_1l', 'z_1l'\n",
     "* 'atom_count', 'atom_0l', 'atom_0r', 'atom_1l', 'atom_1r'\n",
     "\n",
-    "As the creation of these features takes a while, we import them directly from a CSV file. In case you want to recreate the data on your own, you can either have a look at the notebook linked above or use the 'Distance_feature.py' script in this repository."
+    "As the creation of these features takes a while, we import them directly from a CSV file. In case you want to recreate the data on your own, you can either have a look at the notebook linked above or use the function 'create_non_TDA_features' in the 'feature.py' script in this repository."
    ]
   },
   {
@@ -217,7 +217,7 @@
    "source": [
     "## TDA\n",
     "\n",
-    "As mentioned in the introduction, the main goal of this notebook is to show how TDA can be used in a machine learning problem to extract more information from a dataset and to create new features. We will look at two different but similar approaches to this problem: first we treat a molecule as a point cloud then as a graph. "
+    "As mentioned above, the main goal of this notebook is to show how TDA can be used in a machine learning problem to extract more information from a dataset and to create new features. We will look at two different but similar approaches to this problem: first, we treat a molecule as a point cloud then as a graph. "
    ]
   },
   {
@@ -267,11 +267,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we are ready to plot the persistence diagram for a molecule. In order to learn more about how to interpret this diagram, read e.g. this https://arxiv.org/pdf/1710.04019.pdf.\n",
+    "Now we are ready to plot the persistence diagram for a molecule. In order to learn more about how to interpret this diagram, read e.g. this introduction to TDA: \"An introduction to Topological Data Analysis: fundamental and practical aspects for data scientists\" (https://arxiv.org/pdf/1710.04019.pdf).\n",
     "\n",
-    "The next important step is to extract features from the diagram. One interesting feature we report here is the number of relevant holes (in dimension 1). This corresponds to the number of holes that have a lifetime above a certain threshold. \n",
+    "The next important step is to extract features from the diagram. One interesting feature we show here is the number of relevant holes (in dimension 1). This corresponds to the number of holes that have a lifetime above a certain threshold. \n",
     "\n",
     "You can try out one of the 100 molecules by choosing the 'molecule_idx' variable (between 0 and 99)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "molecule_idx = 72"
    ]
   },
   {
@@ -1312,7 +1321,6 @@
     }
    ],
    "source": [
-    "molecule_idx = 72\n",
     "persistence_fig = plot_diagram(pDiag[molecule_idx][0])\n",
     "iplot(persistence_fig)"
    ]
@@ -2852,7 +2860,6 @@
     }
    ],
    "source": [
-    "molecule_idx = 72\n",
     "betti_curves = diag.BettiCurve()\n",
     "betti_curves.fit(pDiag[molecule_idx])\n",
     "X_betti_curves = betti_curves.transform(pDiag[molecule_idx])\n",
@@ -4222,7 +4229,6 @@
     }
    ],
    "source": [
-    "molecule_idx = 72\n",
     "molecule_fig = plot_molecule(molecule_selection[molecule_idx], structures)\n",
     "iplot(molecule_fig)\n",
     "\n",
@@ -4242,7 +4248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As the features are molecule-specific, i.e. for each molecule we have a different value but not for all atom pairs, we have to assign the correct value to the samples in the dataset. "
+    "As the features are molecule-specific, i.e. we have calculated a feature value for each molecule but not for all atom pairs, we have to assign the correct value to the samples in the dataset. "
    ]
   },
   {
@@ -4349,7 +4355,9 @@
    "source": [
     "We can also take another approach and think about the molecule as a graph instead of as a point cloud. In order to do this, one has to define a distance matrix that indicates the distance between two points in the molecule. Then we can take the same steps as before: calculate the persistence diagram and extract features.\n",
     "\n",
-    "Note: In order for giotto-learn's 'VietorisRipsPersistence' method to know that the matrix we are passing has to be interpreted as a distance matrix not as a point cloud, it's important to set the variable 'metric' to 'precomputed’. This can be seen in the 'computing_persistence_diagram' function."
+    "Note: In order for giotto-learn's 'VietorisRipsPersistence' method to know that the matrix we are passing has to be interpreted as a distance matrix not as a point cloud, it's important to set the variable 'metric' to 'precomputed’. This can be seen in the 'computing_persistence_diagram' function.\n",
+    "\n",
+    "Calculating the persistence diagrams and the features takes a while. For this reason we load the data from a pickle file. In case you want to recompute the diagrams and the features, set the recalculate_graph_pd variable to 'True'."
    ]
   },
   {
@@ -4551,7 +4559,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's plot the scores and see what improvement we get with TDA. Don't forget that due to the logarithm in the formula above a lower score is acually better (i.e. -0.5 is better than -0.3)."
+    "Let's plot the scores and see what improvement we get with TDA. Don't forget that due to the logarithm in the formula above a lower score is acually better (i.e. -0.5 is better than -0.3 for example)."
    ]
   },
   {
@@ -5504,8 +5512,8 @@
    ],
    "source": [
     "improvements = (((np.mean((np.array(results_mean_2)[:-1] - np.array(results_mean_1)[:-1])/np.array(results_mean_1)[:-1])*100)), \n",
-    " np.max(((np.array(results_mean_2)[:-1] - np.array(results_mean_1)[:-1])/np.array(results_mean_1)[:-1])*100),\n",
-    " np.min(((np.array(results_mean_2)[:-1] - np.array(results_mean_1)[:-1])/np.array(results_mean_1)[:-1])*100))\n",
+    "                  np.max(((np.array(results_mean_2)[:-1] - np.array(results_mean_1)[:-1])/np.array(results_mean_1)[:-1])*100),\n",
+    "                  np.min(((np.array(results_mean_2)[:-1] - np.array(results_mean_1)[:-1])/np.array(results_mean_1)[:-1])*100))\n",
     "\n",
     "print('Mean improvement:', np.round(improvements[0], 2), '%')\n",
     "print('Max. improvement:', np.round(improvements[1], 2), '%')\n",
