--- a/notebooks/molecule_coupling_prediction.ipynb
+++ b/notebooks/molecule_coupling_prediction.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Created by: Colin Kälin and Lewis Tunstall* "
+    "*Created by: Colin Kälin and Lewis Tunstall* \n",
+    "\n",
+    "Associated blog post: LINK HERE"
    ]
   },
   {
