Fix typos in notebook

--- a/Molecule Bond Prediction.ipynb
+++ b/Molecule Bond Prediction.ipynb
@@ -1810,7 +1810,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From these diagrams, a variety of features can be extracted to feed our regression model downstream. Since each persistence diagram is a NumPy array of birth-death-dimension triple, we can code up simple functions to manipulate the data. For instance, we can calculate the _average lifetime_ of points as follows:\n",
+    "From these diagrams, a variety of features can be extracted to feed our regression model downstream. Since each persistence diagram is a NumPy array of birth-death-dimension triples, we can code up simple functions to manipulate the data. For instance, we can calculate the _average lifetime_ of points as follows:\n",
     "\n",
     "```python\n",
     "def average_lifetime(X_scaled, homology_dim):\n",
@@ -1879,7 +1879,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In other words, for each molecule we can assign 3 new features: \"average lifetime\" for each homology dimension. Another interesting feature is the number of \"relevant\" holes, which returns the number cyan points (H1) that are above some predefined threshold from the birth = death diagonal (the dashed line in the diagram):"
+    "In other words, for each molecule we can assign 3 new features: \"average lifetime\" for each homology dimension. Another interesting feature is the number of \"relevant\" holes, which returns the number cyan coloured points (H1) that are above some predefined threshold from the birth = death diagonal (the dashed line in the diagram):"
    ]
   },
   {
