Add overwrite flag to unzip

--- a/Molecule Bond Prediction.ipynb
+++ b/Molecule Bond Prediction.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "# uncomment and run to download data\n",
-    "# !wget https://storage.googleapis.com/l2f-open-models/molecule-bond-prediction/data.zip; unzip data.zip; rm data.zip"
+    "# !wget https://storage.googleapis.com/l2f-open-models/molecule-bond-prediction/data.zip; unzip -o data.zip; rm data.zip"
    ]
   },
   {
