Add blog post link to README and notebook

--- a/Molecule Bond Prediction.ipynb
+++ b/Molecule Bond Prediction.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "*Created by:* Colin Kälin and Lewis Tunstall, December 2019 \n",
     "\n",
-    "*Blog post:* ADD LINK\n",
+    "*Blog post:* https://bit.ly/2Qj82FF\n",
     "\n",
     "*Summary:* This notebook provides a walkthrough on creating topological features for machine learning with [giotto-learn](https://github.com/giotto-ai/giotto-learn). \n",
     "\n",
